# jira-oauth-generator

./: .gitignore  README.md  access_using_jira_library.py  access_using_requests_package.py  jira_oauth_token_generator.py  pyproject.toml  requirements.txt  setup.py
config/: final_oauth_token.config  starter_oauth.config
jira_oauth_generator/: access_using_requests_package.py  jira_oauth_token_generator.py
