[tool.poetry]
name = "jira-oauth-generator"
version = "0.1.7"
description = "Generator of access token for Jira OAuth"
authors = ["Raju Kadam", "Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rominf/jira-oauth-generator"

[tool.poetry.dependencies]
python = "^3.5"
asn1crypto = "^0.24.0"
certifi = "^2018.11"
cffi = "^1.11"
chardet = "^3.0"
click = "^7.0"
cryptography = "^2.4"
defusedxml = "^0.5.0"
httplib2 = "^0.12.0"
idna = "^2.8"
jira = "^2.0"
oauth2 = "^1.9"
oauthlib = "^2.1"
pbr = "^5.1"
pycparser = "^2.19"
PyJWT = "^1.7"
six = "^1.11"
tlslite = "^0.4.9"
urllib3 = "^1.24"
requests = "^2.15.1"
requests-oauthlib = "^1.0.0"
requests-toolbelt = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
